# event-scheduler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.Docker.md  README.md  TODO.md  compose.yaml  graph.ipynb  langgraph.json  main.py  pyproject.toml  requirements.txt
ai_logging/: log_llm.py
data/raw/: events.csv
models/: event.py
my_graph/: agent.py  nodes.py
scheduler_graph/: agent.py  crawler.py  database.py  edges.py  llm.py  nodes.py  parser.py  search.py  state.py  tools.py
scripts/: graph.ipynb
src/scheduler_app/: cli.py  wsgi.py
src/scheduler_app/app_logging/: log_llm.py
src/scheduler_app/graph/: builder.py  edges.py  state.py
src/scheduler_app/graph/nodes/: augment_events.py  filter_events.py  finalize_output.py  find_events.py  find_restaurants.py  find_stations.py  load_events.py
src/scheduler_app/graph/tools/: web_search.py
src/scheduler_app/infra/: database.py  llm.py  tavily.py  telegram.py
src/scheduler_app/models/: event.py
src/scheduler_app/services/: input_handlers.py  parser.py
src/scheduler_app/utils/: rate_limit.py
tests/fixtures/: events_calendar_sample.html
tests/unit/: test_crawler.py  test_database.py  test_event_dataclass.py  test_filter_events.py  test_find_restaurants.py  test_llm_client_factory.py  test_parser.py
tools/: visualize_graph.py
utils/: graph.ipynb  visualize_graph.py
